--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,25 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Recipe Title: <%= f.text_field :title %>
+
+<br></br>
+
+Ingredients:
+<br></br>
+
+  <%= f.fields_for :ingredients do |ingredient_builder| %>
+
+  <fieldset>
+
+    <%= ingredient_builder.label :name %>
+    <%= ingredient_builder.text_field :name %><br />
+
+    <%= ingredient_builder.label :quantity %>
+    <%= ingredient_builder.text_field :quantity %><br />
+
+</fieldset>
+
+<% end %>
+
+<%= f.submit %>
+
 <% end %>
