--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
-<%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+<%= form_for @recipe do |recipe_builder| %>
+  Title: <%= recipe_builder.text_field :title %><br><br>
+  
+  <p>Ingredients:</p>
+  <%= recipe_builder.fields_for :ingredients do |ingredient_builder| %>
+    <p>
+      <%= ingredient_builder.label :name %>
+      <%= ingredient_builder.text_field :name %><br>
+    </p>
+    <p>
+      <%= ingredient_builder.label :quantity %>
+      <%= ingredient_builder.text_field :quantity %><br>
+    </p>
+  <% end %>
+
+  <%= recipe_builder.submit %>
 <% end %>
