--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -3,7 +3,16 @@
 
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <br><br>
+  <h4>Add Ingredients</h4>
+  <%= f.fields_for :ingredients do |ingredient_builder| %>
+    <%= ingredient_builder.label :name  %>
+    <%= ingredient_builder.text_field :name  %>
+    <br>
+    <%= ingredient_builder.label :quantity  %>
+    <%= ingredient_builder.text_field :quantity  %>
+    <br><br>
+  <% end %>
   <br>
-  
   <%= f.submit %>
 <% end %>
