--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+
+  <%= f.fields_for :ingredients do |ff| %>
+	<%= ff.label :name %>
+    <%= ff.text_field :name %>
+    <%= ff.label :quantity %>
+    <%= ff.text_field :quantity %>
+    <br>
+  <% end %>
+  <%=f.submit 'commit' %>
 <% end %>
+
