--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <%= f.label :ingredients %>
+  <%= f.fields_for :ingredients do |ingredients_form| %>
+    <%= ingredients_form.label :name %>
+    <%= ingredients_form.text_field :name %>
+    <%= ingredients_form.label :quantity %>
+    <%= ingredients_form.text_field :quantity %>
+  <% end %>
+  <%= f.submit %>
 <% end %>
