--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <br><br>
+    ingredient: <br>
+    <%= ingredient.label :name %><br>
+    <%= ingredient.text_field :name %>
+    <br>
+    <%= ingredient.label :quantity %><br>
+    <%= ingredient.text_field :quantity %>
+    <br>
+  <% end %>
+
+  <%= submit_tag 'Save' %>
+<% end %>
+
