--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+    <%= ingr.label :ingredient_1 %>
+    <%= ingr.text_field :ingredient_1 %><br>
+
+    <%= ingr.label :ingredient_2 %>
+    <%= ingr.text_field :ingredient_2 %><br>
+    
+  <% end %>
+
+  <%= f.submit %>
+<% end %>
