--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title:
+  <br> <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |i| %>
+  <%= i.label :quantity %>
+  <%= i.text_field :quantity %>
+
+    <%= i.label :name %>
+    <%= i.text_field :name %>
+  <% end %>
+<%= f.submit %>
 <% end %>
