--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  Ingredients:
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.text_field :name %>
+    <%= ingredient.text_field :quantity %>
+  <% end %>
+  <%= f.submit %>
 <% end %>
