--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,9 +2,9 @@
   Title: <%= f.text_field :title %>
 
   <h2>ingredients:</h2>
-  <input type="text" name="recipe[ingredients_attributes][0][name]" id="recipe_ingredients_attributes_0_name" >
-  <input type="text" name="recipe[ingredients_attributes][0][quantity]" id="recipe_ingredients_attributes_0_quantity" >
-  <input type="text" name="recipe[ingredients_attributes][1][name]" id="recipe_ingredients_attributes_1_name">
-  <input type="text" name="recipe[ingredients_attributes][1][quantity]" id="recipe_ingredients_attributes_1_quantity">
+  <input type="text" name="recipe[ingredients_attributes][0][name]" id="recipe_ingredients_attributes_0_name" ><br>
+  <input type="text" name="recipe[ingredients_attributes][0][quantity]" id="recipe_ingredients_attributes_0_quantity" ><br>
+  <input type="text" name="recipe[ingredients_attributes][1][name]" id="recipe_ingredients_attributes_1_name"><br>
+  <input type="text" name="recipe[ingredients_attributes][1][quantity]" id="recipe_ingredients_attributes_1_quantity"><br>
   <%= f.submit %>
 <% end %>
