--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    Ingredient name: <%= ingredient.text_field :name %><br>
+    Quantity: <%= ingredient.text_field :quantity %><br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
