--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
+<h1>Add  a Recipe</h1>
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <p>
+
+  <%= f.fields_for :ingredients do |ing| %>
+      <%= ing.label :name%>
+      <%= ing.text_field :name %>
+      <%= ing.label :quantity %>
+      <%= ing.text_field :quantity %>
+      <p>
+      
+  <% end %>
+  <%= f.submit %>
 <% end %>
+
