--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br><br>
+  Ingredients:
+  <br>
+  <%= f.fields_for :ingredients do |ingred| %>
+    <%= ingred.label :name %>
+    <%= ingred.text_field :name %>
+    <br>
+    <%= ingred.label :quantity %>
+    <%= ingred.text_field :quantity %>
+    <br><br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
