--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+    Name: <%= ingr.text_field :name %><br>
+    Quantity: <%= ingr.text_field :quantity %><br>
+    <% end %>
+    <%= f.submit %>
 <% end %>
