--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br><br>
+
+  <%= f.fields_for :ingredients do |i| %>
+
+  <%= i.label :name, "Ingredient" %>
+  <%= i.text_field :name %><br><br>
+
+  <%= i.label :quantity, "Quantity" %>
+  <%= i.text_field :quantity %><br><br><br><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
