--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <fieldset>
+      <legend>Ingredients:</legend>
+        <%= ingredient.label :name %>
+        <%= ingredient.text_field :name %><br>
+
+        <%= ingredient.label :quantity %>
+        <%= ingredient.text_field :quantity %>
+    </fieldset>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
