--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
+<h1>Create a New Recipe</h1>
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>:
+  <%= f.text_field :title %></p>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>:
+    <%= ingredient.text_field :name %></p>
+    
+    <%= ingredient.label :quantity %>:
+    <%= ingredient.text_field :quantity %></p>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
