--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title:<br><br>
+  <%= f.text_field :title %><br><br>
+
+  Ingredients:<br><br>
+  <%= f.fields_for :ingredients do |ingr| %>
+    <li>
+      <%= ingr.label :quantity %>
+      <%= ingr.text_field :quantity %>
+
+      <%= ingr.label :name %>
+      <%= ingr.text_field :name %>
+    </li>
+  <% end %>
+  <br>
+  <%= f.submit %>
+
 <% end %>
