--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,21 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %> <br>
+  <%= f.fields_for :ingredients do |ingredient|%>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %> <br>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %> <br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
+
+
+<%# params = {
+    recipe: {
+       :title => "Pizza",
+       :ingredient_attributes => {
+         0 => {name: "dough", quantity: "1 lb"},
+         1 => {name: "cheese",quantity: "0.5 lb"}
+       }
+    }
+} %>
