--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,11 +1,14 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
-  <%= f.fields_for :ingredients do |i| %>
-    <%= i.label :attributes_0_quantity %>
-    <%= i.text_field :attributes_0_name %><br>
- 
-    <%= i.label :attributes_1_quantity %>
-    <%= i.text_field :attributes_1_name %><br>
+  <%= f.label :title %>
+  <%= f.text_field :title, :id => "recipe_title" %><br>
+
+  <%= f.fields_for :ingredients do |fields| %>
+    <%= fields.label :name %>
+    <%=fields.text_field :name %>
+    <%= fields.label :quantity %>
+    <%=fields.text_field :quantity %>
+    <br>
   <% end %>
-  <%= f.submit %>
+
+<%=f.submit%>
 <% end %>
