--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @recipe do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title, :id => "recipe_title" %><br>
-
+  <!-- fields_for will create a params hash -->
   <%= f.fields_for :ingredients do |fields| %>
     <%= fields.label :name %>
     <%=fields.text_field :name %>
