--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,9 +2,13 @@
   Title: <%= f.text_field :title %>
   <ul>
     <%= f.fields_for :ingredients do |item| %>
-    <li>Name: <%= item.text_field :name %></li>
-    <li>Quanity: <%= item.text_field :quantity %></li>
+    <li>
+      Name: <%= item.text_field :name %>
+      Quanity: <%= item.text_field :quantity %>
+    </li>
     <% end %>
+
+
   </ul>
 
   <%= f.submit%>
