--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingred| %>
+    <%= ingred.label :quantity %>
+    <%= ingred.text_field :quantity %><br>
+
+    <%= ingred.label :name %>
+    <%= ingred.text_field :name %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
