--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
-  
-  Ingredients:
+  Title: <%= f.text_field :title %><br>
+
+  Ingredients:<br>
   <%= f.fields_for :ingredients do |ingredient| %>
     <%= ingredient.label :name %>
     <%= ingredient.text_field :name %><br>
