--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,7 @@
+<h1>Recipes</h1>
 <ul>
 <% @recipes.each do |recipe| %>
   <li><%= link_to recipe.title, recipe %></li>
 <% end %>
 </ul>
+<%= link_to 'Create a Recipe', new_recipe_path %>
