--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,28 @@
+<%# <form action="">
+  <fieldset>
+    <label>Ingredient Name</label>
+    <input type="text" name="" id="">
+
+    <label>Ingredient Quantity</label>
+    <input type="text" name="" id="">
+  </fieldset>
+  <input type="submit" name="submit" id="submit">
+</form> %>
+
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+
+  <%= f.label :title %>:
+  <%= f.text_field :title %> 
+  <br>
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %>
+  <br>
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %>
+  <br>
+  <% end %>
+  <%= f.submit %>
+  
 <% end %>
