--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%=f.label :title %>  <br>
+  <%=f.text_field :title %>
+  <br>
+ <%=  f.fields_for :ingredients do |ingredient| %>  <br>
+  <%= ingredient.label :name %>  <br>
+  <%= ingredient.text_field :name %>  <br>
+  <%= ingredient.label :quantity %>  <br>
+  <%= ingredient.text_field :quantity %>  <br>
+ <% end %>
+ <br>
+<%= f.submit %>
 <% end %>
