--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
-<%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+<%= form_for recipe do |f| %>
+
+  Title: <%= f.text_field :title %><br></br>
+  <br>
+  Ingredients:<br></br>
+  <br>
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %><br></br>
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %><br></br>
+    <br>
+  <% end %>
+
+  <%= f.submit %>
+
 <% end %>
