--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,7 @@
+<h2>Recipes</h2> 
+
 <ul>
 <% @recipes.each do |recipe| %>
-  <li><%= link_to recipe.title, recipe %></li>
+  <li><%= link_to recipe.title, recipe %></li><br>
 <% end %>
 </ul>
