--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <p>Title: <%= f.text_field :title %></p>
+  <ul>
+    <%= f.fields_for :ingredients do |ingredient| %>
+    <li>
+      <%= f.label :name %>
+      <%= ingredient.text_field :name  %>
+      <br>
+      <%= f.label :quantity %>
+      <%= ingredient.text_field :quantity %>
+    </li>
+    <% end %>
+  </ul>
+  <%= f.submit %>
+<% end %>
