--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <h3>Ingredients</h3>
+  <ul>
+    <%= f.fields_for :ingredients do |i| %>
+      <li>
+        <%= i.label :name %>
+        <%= i.text_field :name %><br>
+        <%= i.label :quantity %>
+        <%= i.text_field :quantity %>
+      </li>
+    <% end %>
+    <%= link_to 'add ingredient', @recipe %>
+  </ul>
+
+  <br>
+  <%= f.submit %>
 <% end %>
