--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,22 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>
+    <%= f.label :recipe_title %>
+    <%= f.text_field :title %>
+  <p>
+
+  <%= f.fields_for :ingredients do |ingredients_builder| %>
+    <fieldset>
+      <legend>Ingredient</legend>
+        <p>
+          <%= ingredients_builder.label :name %>
+          <%= ingredients_builder.text_field :name %>
+        </p>
+        <p>
+          <%= ingredients_builder.label :quantity %>
+          <%= ingredients_builder.text_field :quantity %>
+        </p>
+    </fieldset>
+    <% end %>
+  
+  <%= f.submit %>
 <% end %>
