--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+  <h3>Ingredients</h3>
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %><br>
+
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
