--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,11 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
-  <%= f.fields_for :ingredients do |ing|%>
-    <%= ing.label :name %>
-    <%= ing.text_field :name %>
-
-    <%= ing.label :quantity %>
-    <%= ing.text_field :quantity %>
-  <% end %>
+  <ul>
+    <%= f.fields_for :ingredients do |ingredient| %>
+    <li>
+      name: <%= ingredient.text_field :name %>
+      qty: <%= ingredient.text_field :quantity %>
+    </li>
+    <% end %>
+    <%= link_to 'add ingredient', @recipe %>
+  </ul>
   <%= f.submit %>
 <% end %>
