--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
-<% end %>
+  <br>
+  <%= f.fields_for :ingredients do |ingrd| %>
+
+    <%= ingrd.label :recipe_ingredients_quantity %>
+    <%= ingrd.text_field :quantity %>
+    <br>
+    <%= ingrd.label :recipe_ingredients_name %>
+    <%= ingrd.text_field :name %>
+    <br>
+
+    <% end %>
+
+    <%= f.submit %>
+  <%end%>
