--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br/>
+  <br/>
+  <br/>
+   <%= f.fields_for :ingredients do |ingr| %>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %><br>
+ <br/>
+    <%= ingr.label :quantity%>
+    <%= ingr.text_field :quantity %><br><br/>
+  <% end %>
+  <br/>
+  
+  <%= f.submit %>
 <% end %>
