--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,12 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %><br>
+
+   <%= f.fields_for :ingredients do |food| %>
+
+   Quantity: <%= food.text_field :quantity %><br>
+
+   Name: <%= food.text_field :name %><br>
+
+    <% end %>
+    <%= f.submit %>
+<% end %>
