--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
 <%= form_for @recipe do |f| %>
+
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingre| %>
+
+    <%= ingre.label :name%>
+    <%= ingre.text_field :name %><br>
+
+    <%= ingre.label :quantity %>
+    <%= ingre.text_field :quantity %><br>
+
+  <% end %>
+
+  <%= f.submit %>
+
 <% end %>
