--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,18 @@
-<%= render 'form', recipe: @recipe %>
+<h1> New Recipe </h1>
+
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+<div>
+  <h3>Ingredients:</h3>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %><br>
+
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %><br><br>
+  <% end %>
+</div>
+  <%= f.submit %>
+<% end %>
