--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+<%= f.fields_for :ingredients do |ingr| %>
+  <%= ingr.label :recipe_ingredients_attributes_0_quantity %>
+  <%= ingr.text_field :recipe_ingredients_attributes_0_quantity %><br>
+
+  <%= ingr.label :recipe_ingredients_attributes_0_name %>
+  <%= ingr.text_field :recipe_ingredients_attributes_0_name %><br>
+
+  <%= ingr.label :recipe_ingredients_attributes_1_quantity %>
+  <%= ingr.text_field :recipe_ingredients_attributes_1_quantity %><br>
+
+  <%= ingr.label :recipe_ingredients_attributes_1_name %>
+  <%= ingr.text_field :recipe_ingredients_attributes_1_name %><br>
+<% end %>
+  <%= f.submit %>
 <% end %>
