--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>Title: <%= f.text_field :title %></p>
+    <%= f.fields_for :ingredients do |ingredient| %>
+    <li>
+       <%= ingredient.text_field :name %>
+       <%= ingredient.text_field :quantity %>
+    </li>
+    <% end %>
+  <%= f.submit %>
 <% end %>
