--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+            <%=f.fields_for :ingredients do |i|%>
+            <br>
+  Name:       <%=i.text_field :name%>
+  Quantity:   <%=i.text_field :quantity%>
+            <%end%>
+            <br>
+         <%= f.submit%>
 <% end %>
