--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+
+  <p> Title: <%= f.text_field :title %> </p>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+  <li>
+    name: <%= ingredient.text_field :name %>
+    qty: <%= ingredient.text_field :quantity %>
+  </li>
+  <% end %>
+  <%= link_to 'add_ingredient', @recipe %>
+  </ul>
+
+  <%= f.submit %>
+
 <% end %>
