--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
+<h3>New Recipe</h3>
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br></br>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
