--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,25 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </p>
+
+  <fieldset>
+    <legend>Ingredients</legend>
+
+    <%= f.fields_for :ingredients do |ingredient_builder| %>
+      <p>
+        <%= ingredient_builder.label :name %>
+        <%= ingredient_builder.text_field :name %>
+      </p>
+      <p>
+        <%= ingredient_builder.label :quantity %>
+        <%= ingredient_builder.text_field :quantity %>
+      </p>
+    <% end %>
+
+  </fieldset>
+
+  <%= f.submit %>
+
 <% end %>
