--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
-<% end %>
+  <%= f.fields_for :ingredients do |ingr| %>
+      <%= ingr.label :name_1 %>
+      <%= ingr.text_field :name_1 %><br>
+
+      <%= ingr.label :name_2 %>
+      <%= ingr.text_field :name_2 %><br>
+
+      <%= ingr.label :quantity %>
+      <%= ingr.text_field :quantity %><br>
+    <% end %>
+
+    <%= f.submit %>
+  <% end %>
