--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_for @recipe do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %><br><br>
 
   <%= f.fields_for :ingredients do |ingr| %>
     <%= ingr.label :name %>
-    <%= ingr.text_field :name %><br>
+    <%= ingr.text_field :name %>&nbsp&nbsp&nbsp&nbsp
 
     <%= ingr.label :quantity %>
-    <%= ingr.text_field :quantity %><br>
+    <%= ingr.text_field :quantity %><br><br>
   <% end %>
 
   <%= f.submit %>
