--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.label :title %>
   <%= f.text_field :title %><br>
 
-  <%= f.fields_for :ingredients do |ing| %>
+  <%= fields_for :ingredients do |ing| %>
     <%= ing.label :name %>
     <%= ing.text_field :name %><br>
 
