--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title%>
+    
+    <%= f.fields_for :ingredients do |ingr| %>
+
+        <%= ingr.label :quantity %>
+        <%= ingr.text_field :quantity %><br>
+        <%= ingr.label :name %>
+        <%= ingr.text_field :name %><br>
+    <%end%>
+<%=f.submit%>
+
+
+<%end%>
