--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br><br>
+
+  <%= f.fields_for :ingredients do |i| %>
+    Ingredient <%= i.index + 1 %><br><br>
+    <%= i.label :quantity %><br>
+    <%= i.text_field :quantity %><br>
+    <%= i.label :name %><br>
+    <%= i.text_field :name %><br><br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
