--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
-<%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
-<% end %>
+<%= form_for @recipe do |recipe_form| %>
+  Title: <%= recipe_form.text_field :title %><br><br>
+
+  <%= recipe_form.fields_for :ingredients do |ingredient| %>
+  	<%= ingredient.label :name %><br>
+  	<%= ingredient.text_field :name %><br>
+  	<%= ingredient.label :quantity %><br>
+  	<%= ingredient.text_field :quantity %><br>
+	<%end%>
+
+    <br><%= recipe_form.submit%>
+  <% end %>
